--- a/TerminalRSS.ini
+++ b/TerminalRSS.ini
@@ -8,7 +8,7 @@ Item = .*<item>.*<title>(.*)</title>.*<link>(.*)</link>.*<author>(.*)</author>
 [MeasureSite]
 Measure = WebParser
 URL = https://example.com/
-RegExp = (?siU)<title>(.*)</title>.*<link>(.*)</link>#Item##Item##Item##Item##Item##Item##Item##Item##Item##Item#
+RegExp = (?siU)<title>(.*)</title>.*<link>(.*)</link>#Item##Item##Item##Item##Item#
 
 [MeasureItem1Title]
 Measure = WebParser
@@ -84,79 +84,4 @@ StringIndex = 17
 Measure = WebParser
 URL = [MeasureSite]
 StringIndex = 18
-
-[MeasureItem6Title]
-Measure = WebParser
-URL = [MeasureSite]
-StringIndex = 19
-
-[MeasureItem6Link]
-Measure = WebParser
-URL = [MeasureSite]
-StringIndex = 20
-
-[MeasureItem6Author]
-Measure = WebParser
-URL = [MeasureSite]
-StringIndex = 21
-
-[MeasureItem7Title]
-Measure = WebParser
-URL = [MeasureSite]
-StringIndex = 22
-
-[MeasureItem7Link]
-Measure = WebParser
-URL = [MeasureSite]
-StringIndex = 23
-
-[MeasureItem7Author]
-Measure = WebParser
-URL = [MeasureSite]
-StringIndex = 24
-
-[MeasureItem8Title]
-Measure = WebParser
-URL = [MeasureSite]
-StringIndex = 25
-
-[MeasureItem8Link]
-Measure = WebParser
-URL = [MeasureSite]
-StringIndex = 26
-
-[MeasureItem8Author]
-Measure = WebParser
-URL = [MeasureSite]
-StringIndex = 27
-
-[MeasureItem9Title]
-Measure = WebParser
-URL = [MeasureSite]
-StringIndex = 28
-
-[MeasureItem9Link]
-Measure = WebParser
-URL = [MeasureSite]
-StringIndex = 29
-
-[MeasureItem9Author]
-Measure = WebParser
-URL = [MeasureSite]
-StringIndex = 30
-
-[MeasureItem10Title]
-Measure = WebParser
-URL = [MeasureSite]
-StringIndex = 31
-
-[MeasureItem10Link]
-Measure = WebParser
-URL = [MeasureSite]
-StringIndex = 32
-
-[MeasureItem10Author]
-Measure = WebParser
-URL = [MeasureSite]
-StringIndex = 33
 
