Add output file name to args

--- a/TerminalRSS.ini
+++ b/TerminalRSS.ini
@@ -1,5 +1,5 @@
 [Rainmeter]
-Update = 5000
+Update = 250
 Author = chand1012
 
 [Variables]
@@ -7,7 +7,7 @@ Item = (?(?=.*<item>).*<item>.*<title>(.*)<\/title>.*<link>(.*)<\/link>.*<author
 
 [MeasureSite]
 Measure = WebParser
-URL = https://example.com/rss.xml
+URL = http://192.168.1.22:5000/logs?apps=MemeBotProduction,BotDatabase&size=20
 RegExp = (?siU)<title>(.*)<\/title>.*<link>(.*)<\/link>#Item##Item##Item##Item##Item##Item##Item##Item##Item##Item##Item##Item##Item##Item##Item##Item##Item##Item##Item##Item#
 
 [MeasureItem1Title]
